    * In old games, attacks with enemy type-killer bits wrongly counted
      as elemental for the purpose of spawning. This fix is only
      applied if the game has not been edited since Ypsiliform. [James]

  * New Plotscripting Stuff
    * "menu item at pixel" [Ralph, James]

  * Stuff Only Developers Will Notice
    * Support latest FreeBASIC version, by adding OPENFILE layer [Ralph]

??? ?? 2016 [Callipygous+1]

  * Bugfixes
    * You weren't meant to be able to resize the window in the sprite
      editor; doing so would corrupt graphics (gfx_sdl only) [Ralph]
    * Under Unix, utilities couldn't be run (e.g. to encode and import
      audio or distribute the game) on files containing the characters
      ( ) | < > # ; &.
    * Running utilities (like hspeak) didn't work on Macs where the
      OHRRPGCE hadn't been installed previously [Ralph]
    * Delete key didn't work while typing on Macs. And after resizing
      the window, text input stopped working. [Ralph]
    * Fix the Android virtual gamepad being hidden if you open a game,
      exit to the file-picker and then open a game again
    * Options for changing the window size now work on Macs [Ralph]

  * Stuff Only Developers Will Notice
    * 64 bit builds work now.

April 04 2016 [Callipygous]

  * New Features
    * Ported to Android phones and tablets, as well as specific support
      for the OUYA, Gamestick and FireTV Android-based consoles!
      New "Platform-specific options" menu in General Game Data.
      See http://rpg.hamsterrepublic.com/ohrrpgce/Making_Android_games
      for information about how to port your game. You can't yet use
      the Distribute Game menu for Android. [James, Ralph]
    * While placing doors in the map editor you can now specify door
      number, and jump to existing door locations [Ralph]
    * When buying equipment in a shop, show stat bonuses [James]
    * When hiring heroes in a shop, show hero portraits [James]