@@ -20,6 +20,12 @@ struct GFX_INIT
 	void (__cdecl *SendDebugString)(const char* szMessage);
 };
 
+enum CursorVisibility {
+	CV_Hidden = 0,   // (cursorHidden)  Cursor always hidden
+	CV_Visible = -1, // (cursorVisible) Cursor always shown, except on touch screens
+	CV_Default = -2  // (cursorDefault) Cursor shown when windowed, hidden in fullscreen
+};
+
 /////////////////////////////////////////////////////////////////////////////////////////////
 //basic backend functions
 int gfx_Initialize(const GFX_INIT* pCreationData); //initializes the backend; if failed, returns 0
@@ -45,8 +51,7 @@ void gfx_PumpMessages(); //pumps the backend's message queues and polls input
 void gfx_SetWindowTitle(const char* szTitle); //sets the window title; the backend may add messages to the window title to describe further option
 const char* gfx_GetWindowTitle(); //returns the window title without the backend's possible additions
 
-void gfx_ShowCursor(); //sets the os cursor to display over the client area
-void gfx_HideCursor(); //sets the os cursor to hide while over the client area
+void gfx_SetCursorVisibility(CursorVisibility visibility); //visibility of the OS cursor over the client area
 void gfx_ClipCursor(int left, int top, int right, int bottom); //clips the os cursor to the ohr rectangle, which is scaled to the client area; passing a negative for any value disables the clip
 
 /////////////////////////////////////////////////////////////////////////////////////////////
